svc-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-service
spec:
  selector:
    app: wordpress
  type: ClusterIP
  ports:
  - name: wordpress
    protocol: TCP
    port: 80
    targetPort: 80
